; ModuleID = '/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium-octeon.c_octeon_mmc_int_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mmc/host/extr_cavium-octeon.c_octeon_mmc_int_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cvm_mmc_host = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cvm_mmc_host*, i32)* @octeon_mmc_int_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @octeon_mmc_int_enable(%struct.cvm_mmc_host* %0, i32 %1) #0 {
  %3 = alloca %struct.cvm_mmc_host*, align 8
  %4 = alloca i32, align 4
  store %struct.cvm_mmc_host* %0, %struct.cvm_mmc_host** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %3, align 8
  %7 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %3, align 8
  %10 = call i64 @MIO_EMM_INT(%struct.cvm_mmc_host* %9)
  %11 = add nsw i64 %8, %10
  %12 = call i32 @writeq(i32 %5, i64 %11)
  %13 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %3, align 8
  %14 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %26, label %17

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %3, align 8
  %20 = getelementptr inbounds %struct.cvm_mmc_host, %struct.cvm_mmc_host* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load %struct.cvm_mmc_host*, %struct.cvm_mmc_host** %3, align 8
  %23 = call i64 @MIO_EMM_INT_EN(%struct.cvm_mmc_host* %22)
  %24 = add nsw i64 %21, %23
  %25 = call i32 @writeq(i32 %18, i64 %24)
  br label %26

26:                                               ; preds = %17, %2
  ret void
}

declare dso_local i32 @writeq(i32, i64) #1

declare dso_local i64 @MIO_EMM_INT(%struct.cvm_mmc_host*) #1

declare dso_local i64 @MIO_EMM_INT_EN(%struct.cvm_mmc_host*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
